# ruri

./: .clang-format  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CNAME  COPYING  ChangeLog  Changelog  FAQ.md  INSTALL  LICENSE  Makefile  Makefile.am  README  README-zh.md  README.md  README_zh.md  USAGE.md  a.out  autogen.sh  build.c  config.mk.in  configure  configure.ac  container  container.c  container.h  daemon.c  get-ruri.sh  getruri.sh  logo.py  package-lock.json  package.json  pstree.c  rule.make  ruri.c  ruri.h
.github/workflows/: arm64.yml  armv7.yml  build.yml  c-cpp.yml  codeql.yml  deploy.yml  i386.yml  riscv64.yml  test.yml  x86_64.yml
debian/: changelog  control  copyright  install  rules  ruri.1  ruri.manpages  ruri.substvars
dev/: cgroup.c  pstree.c
doc/: Build.md  FAQ.md  Integration.md  README_zh.md  Security.md  USAGE.md  USAGE_zh.md  check-config.sh  mount.md  ruri.1  rurienv.md
docs/: Build.md  FAQ.md  Integration.md  Security.md  USAGE.md  index.md  other_Security.md  rurienv.md  what_is_ruri.md
docs/.vitepress/: config.ts
docs/.vitepress/configs/: en.ts  head.ts  index.ts  zh.ts
docs/.vitepress/locales/: en.ts  index.ts  zh.ts
docs/zh/: Build.md  FAQ.md  Integration.md  Security.md  USAGE.md  index.md  other_Security.md  rurienv.md  what_is_ruri.md
logo/: logo.py
shell/: capset.sh  generate-config.sh
src/: README.md  anime.c  build-id.ld  caplist.c  cgroup.c  chroot.c  config.c  cprintf.c  daemon.c  elf-magic.c  info.c  k2v.c  main.c  mount.c  msg.h  passwd.c  ps.c  pstree.c  rootless.c  ruri.c  ruri.h  rurienv.c  rurienv.c.save  rurifetch.c  seccomp.c  shared.c  signal.c  socket.c  tool.c  umount.c  unshare.c
src/easteregg/: README.md  action.c  layer.c  nekofeng.c  typewriter.c
src/easteregg/include/: nekofeng.h
src/include/: cprintf.h  elf-magic.h  hostarch.h  k2v.h  msg.h  ruri.h  version.h
test/: Makefile  clean.sh  global.sh  init-root-test.sh  init-test.sh  test-all.sh  test-root.c  test-root.sh
test/root/: 1-basic.sh  2-container_runtime.sh  3-capability.sh  4-mount.sh  5-ro_mount.sh  6-env.sh  7-ps.sh  8-secure-option.sh  9-cross_arch.sh
tools/: .style.yapf  dockerhub.py
